--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "learn-query-with-database-context-pg",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
